--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -1,3 +1,15 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Merriweather&family=Merriweather+Sans&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Merriweather:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
+
+*{
+    margin: 0;
+    padding: 0;
+    border: none;
+}
+
 body {
-    color: aqua;
+    font-family: Roboto, sans-serif;
+    font-weight: 300;
 }
