--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -3,6 +3,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Merriweather:wght@300&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
 
+/* purple #7E5293, green #377A3B, light green #B2D78A */
+
 *{
     margin: 0;
     padding: 0;
@@ -12,4 +14,22 @@
 body {
     font-family: Roboto, sans-serif;
     font-weight: 300;
+    color:black;
+}
+
+/* headings and logos */
+
+h1, h2 {
+    font-family: Merriweather, serif;
+    font-weight: 400;
+    letter-spacing: 3px;
+    text-transform: uppercase;
+    color: #377A3B;
+}
+
+#logo img {
+    float: left;
+    width: 190px;
+    height: 120px;
+    
 }
