--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -12,6 +12,7 @@
     
 }
 
+
 body {
     font-family: Merriweather, serif;
     font-weight: 300;
@@ -28,6 +29,10 @@ h1, h2 {
     color: #377A3B;
 }
 
+h2 {
+    font-size: 300%;
+    font-weight: 600;
+}
 /* header and navigation bar */
 
 #container-header {
@@ -124,40 +129,47 @@ h1, h2 {
     
 }
 
-#cover-text button {
+#cover-text #button1 {
     background-color: white;
     padding: 10px;
     width: 25%;
     margin-top: 30px;
-    
-    
-
-}
-
-#cover-text button a {
     text-decoration: none;
     color: #377A3B;
+  
+    
     
 }
 
-#cover-text button:hover {
+#button1 a {
+    color: #377A3B;
+    text-decoration: none;
+    font-family: Roboto, sans-serif;
+    letter-spacing: 2px;
+}
+
+#button1:hover {
     background-color: #B2D78A;
-    
+    color: #ffff;
 }
 
 
 
-.button1 {
+#button1 {
     font-size: 16px;
     text-transform: uppercase;
     font-weight: 600;
     border: none;
+    text-decoration: none;
+    padding: 10px;
+    width: 25%;
+    text-align: center;
+    /*font-family: Roboto, sans-serif;*/
+    
     
 }
 
-.button1:hover {
-    color: #ffff;
-}
+
 
 
 /* form */
