--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -164,12 +164,68 @@ h2 {
     padding: 10px;
     width: 25%;
     text-align: center;
-    /*font-family: Roboto, sans-serif;*/
     
     
 }
 
+/*About*/
+ 
+#about-container {
+    
+    margin-top: 30px;
+    height: 600px;
+}
 
+#about-container h2 {
+    text-align: center;
+}
+
+
+.text-container {
+    width: 50%;
+    margin-top: 40px;
+    float: left;
+    
+
+}
+
+.text-container h2 {
+    text-align: center;
+    color: #B2D78A;
+}
+
+
+.text-container p {
+    padding: 50px;
+}
+
+#img-container {
+    width: 50%;
+    float: right;
+    margin-top: 40px;
+    background-color: aqua;
+    text-align: center;
+
+}
+
+#img-container img {
+    height: 400px;
+    width: 300px;
+    margin: auto;
+    
+    
+}
+
+/*services */
+
+#services-container {
+
+    height: 600px;
+}
+
+#services-container h2 {
+    text-align: center;
+}
 
 
 /* form */
