--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -129,44 +129,56 @@ h2 {
     
 }
 
-#cover-text #button1 {
+.hero-button {
+    
+    border: none;
+    padding: 10px;
+    width: 30%;
+    text-align: center;
+    margin-top: 30px;
     background-color: white;
+    
+    
+    
+}
+
+/*#cover-text #button1 {
+    
     padding: 10px;
     width: 25%;
     margin-top: 30px;
     text-decoration: none;
-    color: #377A3B;
+    
+    font-family: Roboto, sans-serif;
   
     
     
 }
-
-#button1 a {
+*/
+.hero-button a {
     color: #377A3B;
     text-decoration: none;
     font-family: Roboto, sans-serif;
     letter-spacing: 2px;
+    font-size: 16px;
+    padding: 20px;
+    text-transform: uppercase;
+    font-weight: 600;
+
 }
 
-#button1:hover {
+.hero-button:hover {
     background-color: #B2D78A;
+    
+}
+
+
+.hero-button a:hover {
+   
     color: #ffff;
 }
 
 
-
-#button1 {
-    font-size: 16px;
-    text-transform: uppercase;
-    font-weight: 600;
-    border: none;
-    text-decoration: none;
-    padding: 10px;
-    width: 25%;
-    text-align: center;
-    
-    
-}
 
 /*About*/
  
