--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -119,6 +119,8 @@ h2 {
     height: 400px;
     margin: 100px 0 0 100px;
     position: absolute;
+    line-height: 1.5;
+    
 }
 
 #cover-text p {
@@ -142,19 +144,7 @@ h2 {
     
 }
 
-/*#cover-text #button1 {
-    
-    padding: 10px;
-    width: 25%;
-    margin-top: 30px;
-    text-decoration: none;
-    
-    font-family: Roboto, sans-serif;
-  
-    
-    
-}
-*/
+
 .hero-button a {
     color: #377A3B;
     text-decoration: none;
@@ -197,6 +187,7 @@ h2 {
     width: 50%;
     margin-top: 40px;
     float: left;
+    line-height: 1.5;
     
 
 }
@@ -215,7 +206,7 @@ h2 {
     width: 50%;
     float: right;
     margin-top: 40px;
-    background-color: aqua;
+    
     text-align: center;
 
 }
@@ -237,6 +228,10 @@ h2 {
 
 #services-container h2 {
     text-align: center;
+}
+
+#video-container {
+    margin-top: 50px;
 }
 
 
