--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -134,7 +134,7 @@ h2 {
 .hero-button {
     
     border: none;
-    padding: 10px;
+    
     width: 30%;
     text-align: center;
     margin-top: 30px;
@@ -151,14 +151,17 @@ h2 {
     font-family: Roboto, sans-serif;
     letter-spacing: 2px;
     font-size: 16px;
-    padding: 20px;
+    padding: 10px;
     text-transform: uppercase;
     font-weight: 600;
+    display: block; /*https://www.codecademy.com/forum_questions/536ccab4548c35ad24001a2e*/
 
 }
 
 .hero-button:hover {
     background-color: #B2D78A;
+    color: #ffff;
+
     
 }
 
@@ -219,20 +222,120 @@ h2 {
     
 }
 
+.button1 {
+    background-color: #B2D78A;
+    border: none;
+    padding: 10px;
+    width: 30%;
+    text-align: center;
+    margin: auto;
+    
+
+
+}
+
+.button1 a {
+    text-decoration: none;
+    font-family: Roboto, sans-serif;
+    color: #ffff;
+    text-transform: uppercase;
+    
+    letter-spacing: 2px;
+    font-size: 16px;
+    font-weight: 600;
+    display: block;
+
+}
+
+
+.button1:hover {
+    background-color: #377A3B;
+}
+
+
 /*services */
 
 #services-container {
 
     height: 600px;
+    background-color: #B2D78A;
 }
 
 #services-container h2 {
     text-align: center;
+    color: #377A3B;
 }
 
 #video-container {
     margin-top: 50px;
 }
+
+
+
+#video {
+    margin-top: 50px;
+
+}
+
+
+.button2 {
+    background-color: #377A3B;
+    border: none;
+    padding: 10px;
+    width: 30%;
+    text-align: center;
+    margin: auto;
+    
+
+
+}
+
+.button2 a {
+    text-decoration: none;
+    font-family: Roboto, sans-serif;
+    color: #ffff;
+    text-transform: uppercase;
+    
+    letter-spacing: 2px;
+    font-size: 16px;
+    font-weight: 600;
+    display: block;
+
+}
+
+
+.button2:hover {
+    background-color: #fff;
+}
+
+.button2 a:hover {
+    color: #377A3B;
+    display: block;
+}
+
+
+
+
+
+
+
+
+#footer-section {
+    width: 100%;
+    height: 250px;
+    background-color: #7E5293;
+}
+
+
+
+
+
+
+
+
+
+
+
 
 
 /* form */
