--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -322,10 +322,35 @@ h2 {
     display: block;
 }
 
+#testimonials-section {
+    width: 100%;
+    height: 400px;
+    float: left;
+}
+
+#testimonials-section .testimonial-box {
+    float: left;
+    
+
+
+}
+.testimonial-box {
+    width: 20%;
+    height: 300px;
+    background-color: #fff;
+    box-shadow: 10px 10px #B2D78A;
+    float: left;
+    margin: 30px;
+    text-align: center;
+    border: #377A3B 1px solid;
+}
 
 
 
-
+#contact-container {
+    width: 100%;
+    height: 500px;
+}
 
 
 
