--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -30,9 +30,18 @@ h1, h2 {
 }
 
 h2 {
-    font-size: 300%;
+    font-size: 250%;
     font-weight: 600;
 }
+
+h3 {
+    font-size: 150%;
+    font-weight: 600;
+    font-family: Roboto, sans-serif;
+    text-transform: uppercase;
+    color: #377A3B;
+}
+
 /* header and navigation bar */
 
 #container-header {
@@ -322,10 +331,11 @@ h2 {
     display: block;
 }
 
-#testimonials-section {
+#testimonial-section {
     width: 100%;
     height: 500px;
-    float: left;
+    background-color: #fff;
+   
 
 }
 
@@ -357,7 +367,7 @@ h2 {
 
 #contact-container {
     width: 100%;
-    height: 600px;
+    height: 700px;
     background-color: #fff;
 }
 
@@ -368,13 +378,19 @@ h2 {
    
 }
 
+/* footer */
 
-#footer-section {
+footer {
     width: 100%;
     height: 250px;
     background-color: #7E5293;
     
 }
+
+.social-networks {
+    text-align: center;
+}
+
 
 /*booking form */
 
