--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -43,6 +43,20 @@ h3 {
     color: #377A3B;
 }
 
+h4 {
+    font-size: 100%;
+    font-family: Roboto, sans-serif;
+    text-transform: uppercase;
+    color: #377A3B;
+
+
+}
+
+
+
+
+
+
 /* header and navigation bar */
 
 #container-header {
@@ -212,7 +226,9 @@ h3 {
 
 
 .text-container p {
-    padding: 30px;
+    padding: 50px;
+    line-height: 2;
+    text-align: justify;
 }
 
 #img-container {
@@ -287,10 +303,12 @@ h3 {
     margin-top: 50px;
 }
 
-
+#video-container h3 {
+    margin-top: 20px;
+}
 
 #video {
-    margin-top: 50px;
+    margin-top: 5%;
     box-shadow: 15px 15px #377A3B;
 
 }
@@ -357,17 +375,32 @@ h3 {
     width: 20%;
     height: 300px;
     background-color: #fff;
-    box-shadow: 10px 10px #B2D78A;
+    
     float: left;
     margin: 2%;
     text-align: center;
     border: #377A3B 1px solid;
+    
 }
 
-.testimonial-box h3 {
-    color: #7E5293;
-    font-weight: 400;
+.testimonial-box p {
     padding: 5%;
+}
+
+.testimonial-box-header {
+    background-color: #B2D78A;
+    width: 100%;
+    height: 70px;
+   
+    
+
+}
+
+
+.testimonial-box-header h3 {
+    color: #fff;
+    font-weight: 500;
+    padding: 7%;
 }
 
 
@@ -386,6 +419,14 @@ h3 {
 
 }
 
+.contact-information-text {
+    padding: 5%;
+}
+
+.contact-information h2 {
+    text-align: center;
+}
+
 .form-container {
     width: 50%;
     float: right;
@@ -399,9 +440,20 @@ h3 {
     margin: auto;
     padding: 3%;
     box-shadow: #B2D78A 10px 10px;
+    border: #B2D78A solid 1px;
     
    
 }
+
+.form-contact h4 {
+    color: #377A3B;
+    text-transform: uppercase;
+    font-family: Roboto, sans-serif;
+    font-size: 100%;
+    padding: 3%;
+    line-height: 1.5;
+}
+
 
 #map {
     text-align: center;
@@ -447,6 +499,19 @@ input {
     box-sizing: border-box;
 }
 
+input[type=submit] {
+    width: 30%;
+    background-color: #B2D78A;
+    color: #377A3B;
+    text-transform: uppercase;
+}
+
+
+input[type=submit]:hover {
+    background-color: #fff; /*https://www.w3schools.com/howto/howto_css_contact_section.asp */
+}
+
+
 #booking{
     width: 70%;
     margin-left: 15%;
@@ -459,11 +524,6 @@ input {
     background-color: #B2D78A;
     width: 70%;
 }
-
-
-
-
-
 
 
 
