--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -350,6 +350,9 @@ h4 {
     display: block;
 }
 
+
+/* Testimonial Section */
+
 #testimonial-section {
     width: 100%;
     height: 500px;
@@ -403,6 +406,7 @@ h4 {
     padding: 7%;
 }
 
+/*contact section*/
 
 #contact-container {
     width: 100%;
@@ -410,9 +414,10 @@ h4 {
     background-color: #fff;
 }
 
+
 .contact-information {
     width: 50%;
-    margin-top: 20px;
+    margin-top: 10px;
     float: left;
     line-height: 1.5;
     
@@ -423,9 +428,11 @@ h4 {
     padding: 5%;
 }
 
+
 .contact-information h2 {
     text-align: center;
 }
+
 
 .form-container {
     width: 50%;
@@ -438,8 +445,8 @@ h4 {
     width: 50%;
     background-color: #fff;
     margin: auto;
-    padding: 3%;
-    box-shadow: #B2D78A 10px 10px;
+    padding: 2%;
+
     border: #B2D78A solid 1px;
     
    
@@ -483,6 +490,10 @@ footer {
     color: #fff;
     margin: 2%;
     padding: 4%;
+}
+
+.social-networks i:hover {
+    transform: scale(1.2);
 }
 
 
