--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -356,24 +356,13 @@ h4 {
 #testimonial-section {
     width: 100%;
     height: 500px;
-    background-color: #fff;
+    background-color: #377A3B;
    
 
 }
 
-#testimonial-section h2 {
-    margin: 4%;
-
-}
 
 
-
-#testimonials-section .testimonial-box {
-    float: left;
-    
-
-
-}
 .testimonial-box {
     width: 20%;
     height: 300px;
@@ -383,11 +372,28 @@ h4 {
     margin: 2%;
     text-align: center;
     border: #377A3B 1px solid;
+
     
+}
+
+.testimonial-heading {
+    text-align: center;
+    padding-top: 3%;
+    padding-bottom: 1%;
+    color:#fff;
+    
+    
+    
+}
+
+.testimonial-heading h2 {
+    color: #fff;
+    text-align: center;
 }
 
 .testimonial-box p {
     padding: 5%;
+    
 }
 
 .testimonial-box-header {
@@ -410,7 +416,7 @@ h4 {
 
 #contact-container {
     width: 100%;
-    height: 700px;
+    height: 800px;
     background-color: #fff;
 }
 
@@ -431,10 +437,12 @@ h4 {
 
 .contact-information h2 {
     text-align: center;
+    padding-bottom: 4%;
 }
 
 
 .form-container {
+    margin-top: 5%;
     width: 50%;
     float: right;
     
@@ -464,16 +472,26 @@ h4 {
 
 #map {
     text-align: center;
-    padding: 5%;
+    padding: 2%;
 }
 
 /* footer */
+
 
 footer {
     width: 100%;
     height: 250px;
     background-color: #7E5293;
     
+    
+}
+
+footer h4 {
+    color: #fff;
+    text-align: center;
+    padding-bottom: 10px;
+    
+   
 }
 
 .social-networks {
@@ -496,9 +514,19 @@ footer {
     transform: scale(1.2);
 }
 
+.copyright-container {
+    padding: 2%;
+    color: #fff;
+
+}
 
 /*booking form */
-
+#booking-form {
+    width: 60%;
+    margin: auto;
+    padding-top: 5%;
+    
+}
 form {
     clear: both;
 }
