--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -443,6 +443,13 @@ h4 {
     padding-bottom: 4%;
 }
 
+#map {
+    text-align: center;
+    padding: 2%;
+}
+
+
+/* form on contact section */
 
 .form-container {
     margin-top: 5%;
@@ -472,12 +479,50 @@ h4 {
     line-height: 1.5;
 }
 
+/* contact form inputs */
 
-#map {
-    text-align: center;
-    padding: 2%;
+
+input {
+    width: 100%;
+    padding: 10px;
+    margin: 5px 0;
+    box-sizing: border-box;
 }
 
+/*input[type=submit] {
+    width: 30%;
+    background-color: #B2D78A;
+    color: #377A3B;
+    text-transform: uppercase;
+}
+
+
+input[type=submit]:hover {
+    background-color: #377A3B;
+    transform: scale(1.1); /*https://www.w3schools.com/howto/howto_css_contact_section.asp 
+    color: #fff;
+}
+*/
+
+.submit-button {
+    margin-top: 10px;
+    background-color: #377A3B;
+    color: #fff;
+    text-align: center;
+    text-transform: uppercase;
+    font-weight: 500;
+    display: block;
+    font-size: 110%;
+    width: 30%;
+    border: none;   
+
+}
+
+.submit-button:hover {
+    background-color: #B2D78A;
+    transform: scale(1.1);
+
+}
 /* footer */
 
 
@@ -524,6 +569,7 @@ footer h4 {
 }
 
 /*booking form */
+
 #booking-form-bg {
     width: 100%;
     background: url('../images/trees-background.jpg') no-repeat center center;
@@ -546,31 +592,6 @@ footer h4 {
     color: #fff;
 }
 
-form {
-    clear: both;
-}
-
-input {
-    width: 60%;
-    padding: 10px;
-    margin: 5px 0;
-    box-sizing: border-box;
-}
-
-input[type=submit] {
-    width: 30%;
-    background-color: #B2D78A;
-    color: #377A3B;
-    text-transform: uppercase;
-}
-
-
-input[type=submit]:hover {
-    background-color: #377A3B;
-    transform: scale(1.1); /*https://www.w3schools.com/howto/howto_css_contact_section.asp */
-    color: #fff;
-}
-
 
 #booking{
     width: 70%;
@@ -579,7 +600,7 @@ input[type=submit]:hover {
 }
 
 
-.submit-button {
+.submit-button-booking {
     border: none;
     background-color: #B2D78A;
     width: 70%;
