Add more structure to booking form

--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -489,6 +489,14 @@ input {
     box-sizing: border-box;
 }
 
+input[type=radio] {
+    width: 5%;
+}
+
+input[type=checkbox] {
+    width: 5%;
+}
+
 /*input[type=submit] {
     width: 30%;
     background-color: #B2D78A;
@@ -573,7 +581,7 @@ footer h4 {
 #booking-form-bg {
     width: 100%;
     background: url('../images/trees-background.jpg') no-repeat center center;
-    height: 800px;
+    height: 1000px;
     overflow: hidden;
     background-attachment: fixed;
 }
@@ -584,12 +592,21 @@ footer h4 {
     padding-top: 5%;
     background-color: rgba(55, 122, 59, 0.70);
     padding: 2%;
+    color: #fff;
 }
+
+#booking-form p {
+    color: #fff;
+    margin-top: 20px;
+}
+
+
 
 #booking-form h1 {
     font-size: 250%;
     font-weight: 600;
     color: #fff;
+    padding: 5%;
 }
 
 
@@ -602,9 +619,22 @@ footer h4 {
 
 .submit-button-booking {
     border: none;
-    background-color: #B2D78A;
-    width: 70%;
+    background-color: #fff;
+    width: 30%;
+    color: #377A3B;
+    text-transform: uppercase;
+    font-weight: 600;
+    font-size: 100%;
+    
 }
+
+.submit-button-booking:hover {
+    background-color: #B2D78A;
+    transform: scale(1.1);
+}
+
+
+
 
 .label-booking {
     color: #fff;
