--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -312,6 +312,8 @@ h4 {
 #video {
     margin-top: 5%;
     box-shadow: 15px 15px #377A3B;
+    width: 560px;
+    height: 315px;
 
 }
 
@@ -388,10 +390,12 @@ h4 {
 }
 
 .testimonial-heading {
-    text-align: center;
+    margin-left: 10%;
     padding-top: 3%;
     padding-bottom: 1%;
     color:#fff;
+    text-transform: none;
+    font-style: italic;
     
     
     
@@ -408,7 +412,7 @@ h4 {
 }
 
 .testimonial-box-header {
-    background-color: #B2D78A;
+    background-color: #377A3B;
     width: 100%;
     height: 70px;
    
@@ -495,6 +499,7 @@ input {
     padding: 10px;
     margin: 5px 0;
     box-sizing: border-box;
+    font-size: 16px;
 }
 
 input[type=radio] {
@@ -505,6 +510,10 @@ input[type=checkbox] {
     width: 5%;
 }
 
+textarea {
+    width: 100%;
+    height: 100px;
+}
 /*input[type=submit] {
     width: 30%;
     background-color: #B2D78A;
@@ -550,12 +559,16 @@ footer {
     
 }
 
-footer h4 {
+footer p {
     color: #fff;
     text-align: center;
     padding-bottom: 10px;
     
    
+}
+
+footer a {
+    color: #fff;
 }
 
 .social-networks {
