--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -292,6 +292,7 @@ h4 {
 
 #services-container {
 
+    width: 100%;
     height: 600px;
     background-color: #B2D78A;
 }
@@ -518,20 +519,6 @@ textarea {
     width: 100%;
     height: 100px;
 }
-/*input[type=submit] {
-    width: 30%;
-    background-color: #B2D78A;
-    color: #377A3B;
-    text-transform: uppercase;
-}
-
-
-input[type=submit]:hover {
-    background-color: #377A3B;
-    transform: scale(1.1); /*https://www.w3schools.com/howto/howto_css_contact_section.asp 
-    color: #fff;
-}
-*/
 
 .submit-button {
     margin-top: 10px;
@@ -676,4 +663,59 @@ footer a {
 
 form {
     clear: both;
+}
+
+/* for large to medium screen sizes*/
+
+@media screen and (max-width: 1200px) {
+    
+    
+    #about-container {
+        width: 100%;
+        height: 1000px;
+    }
+    
+    
+    
+    #services-container {
+        margin: auto;
+        width: 100%;
+        height: 1200px;
+    }
+
+    .text-container {
+        width: 100%;
+        margin: auto;
+        
+    }
+
+    #img-container {
+        width: 100%;
+        margin: auto;
+
+
+    }
+
+    #img-container img {
+        margin-top: 50px;
+    }
+
+    #video-container {
+        width: 100%;
+        margin: auto;
+        text-align: center;
+
+    
+    }
+
+    #video {
+        text-align: center;
+        margin-top: 50px;
+        width: 70%;
+        display: inline-block;
+    }
+
+
+    
+
 }
