add media query for max width 1200

--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -669,6 +669,25 @@ form {
 
 @media screen and (max-width: 1200px) {
     
+    #cover-text {
+        width: 100%;
+        margin: auto;
+        padding: 70px 0 70px 0;
+        text-align: center;
+    }
+
+    #cover-text p {
+        
+        margin: auto;
+        padding: 20px 50px 20px 50px;
+    }
+
+    .hero-button {
+        margin: auto;
+    }
+
+
+
     
     #about-container {
         width: 100%;
@@ -680,7 +699,7 @@ form {
     #services-container {
         margin: auto;
         width: 100%;
-        height: 1200px;
+        height: 1000px;
     }
 
     .text-container {
@@ -710,9 +729,13 @@ form {
 
     #video {
         text-align: center;
-        margin-top: 50px;
+        margin-top: 70px;
         width: 70%;
         display: inline-block;
+    }
+
+    #services-container h2 {
+        margin-top: 30px;
     }
 
 
