--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -397,6 +397,7 @@ h4 {
     margin: 2%;
     text-align: center;
     
+    
 
     
 }
@@ -565,20 +566,11 @@ footer {
     
 }
 
-footer p {
-    color: #fff;
-    text-align: center;
-    padding-bottom: 10px;
-    
-   
-}
 
-footer a {
-    color: #fff;
-}
 
 .social-networks {
     text-align: center;
+    padding: 2%;
 
 }
 
@@ -825,12 +817,6 @@ form {
     }
 
 
-    
-
-
-
-
-
 
 }
 
@@ -895,7 +881,7 @@ form {
 
     #contact-container {
         width: 100%;
-        height: 1300px;
+        height: 1500px;
     }
 
     .contact-information {
@@ -917,6 +903,10 @@ form {
 
     .form-contact {
         margin: auto;
+    }
+
+    footer {
+        height: 150px;
     }
 
 }
@@ -1001,6 +991,10 @@ form {
             height: 250px;
         }
 
+        footer {
+            height: 100px;
+        }
+
 
 }
 
@@ -1024,9 +1018,6 @@ form {
         font-size: 200%;
     }
 
-
-
-
     #about-container {
         height: 1100px;
         
@@ -1038,22 +1029,24 @@ form {
     }
 
     
-
     #services-container {
         height: 1250px;
     }
 
     .testimonial-box {
-        width: 60%;
-        margin: 10px 100px 10px 100px;
-        clear: both;
+        width: 70%;
+        height: 300px;
+        margin-left: auto;
+        margin-right: auto;
+        margin-bottom: 10px;
+        float: none;
         
         
     }
 
     #testimonial-section {
         width: 100%;
-        height: 1700px;
+        height: 1500px;
         
     }
 
