--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -59,6 +59,7 @@ h4 {
 
 
 
+
 /* header and navigation bar */
 
 #container-header {
@@ -216,12 +217,14 @@ h4 {
 
 #about-container h2 {
     text-align: center;
+    margin-bottom: 10px;
 }
 
 
 .text-container {
     width: 50%;
     margin-top: 40px;
+    padding-bottom: 10px;
     float: left;
     line-height: 1.5;
     
@@ -235,7 +238,8 @@ h4 {
 
 
 .text-container p {
-    padding: 50px;
+    padding: 5px 50px 5px 50px;
+    
     line-height: 2;
     text-align: justify;
 }
@@ -306,18 +310,18 @@ h4 {
     background-color: #B2D78A;
 }
 
+
+
 #services-container h2 {
     text-align: center;
     color: #377A3B;
+    margin-bottom: 10px;
 }
 
 #video-container {
     margin-top: 50px;
 }
 
-#video-container h3 {
-    margin-top: 20px;
-}
 
 #video {
     margin-top: 5%;
@@ -336,6 +340,7 @@ h4 {
     width: 30%;
     text-align: center;
     margin: auto;
+    margin-top: 20px;
     
 
 
@@ -726,7 +731,7 @@ form {
     #services-container {
         margin: auto;
         width: 100%;
-        height: 1000px;
+        height: 1100px;
     }
 
     .text-container {
@@ -737,7 +742,7 @@ form {
     }
     
     .text-container p {
-        padding: 50px 80px 50px 80px;
+        padding: 20px 80px 20px 80px;
     }
 
     .button1 {
@@ -918,7 +923,7 @@ form {
         #services-container {
             margin: auto;
             width: 100%;
-            height: 1150px;
+            height: 1250px;
         }
 
         footer {
@@ -959,16 +964,16 @@ form {
         
 
         #about-container {
-            height: 1000px;
+            height: 1100px;
         }
 
         .text-container p {
-            padding: 30px;
+            padding: 20px 30px 20px 30px;
             line-height: 2;
         }
 
         #services-container {
-            height: 1100px;
+            height: 1300px;
         }
 
         .hero-button, .button1, .button2 {
@@ -1030,7 +1035,11 @@ form {
 
     
     #services-container {
-        height: 1250px;
+        height: 1400px;
+    }
+
+    #video {
+        box-shadow: none;
     }
 
     .testimonial-box {
@@ -1074,7 +1083,7 @@ form {
         }
 
         #services-container {
-            height: 1350px;
+            height: 1450px;
         }
 
         body {
@@ -1106,160 +1115,6 @@ form {
 
 
 
-
-
-
-
-
-
-
-/* for large to medium screen sizes*/
-
-/*@media screen and (max-width: 1200px) {
-    
-    #cover-text {
-        width: 100%;
-        margin: auto;
-        padding: 70px 0 70px 0;
-        text-align: center;
-    }
-
-    #cover-text p {
-        
-        margin: auto;
-        padding: 20px 50px 20px 50px;
-    }
-
-    .hero-button-container {
-        margin-top: 20px;
-    }
-
-    .hero-button {
-        margin: auto;
-        width: 20%;
-    }
-
-
-
-    
-    #about-container {
-        width: 100%;
-        height: 1000px;
-    }
-    
-    
-    
-    #services-container {
-        margin: auto;
-        width: 100%;
-        height: 1000px;
-    }
-
-    .text-container {
-        width: 100%;
-        margin: auto;
-        
-    }
-
-    .button1 {
-        width: 20%;
-
-    }
-
-    #img-container {
-        width: 100%;
-        margin: auto;
-        clear: both;
-
-
-    }
-
-    #img-container img {
-        margin-top: 50px;
-    }
-
-    #video-container {
-        width: 100%;
-        margin: auto;
-        text-align: center;
-        clear: both;
-
-    
-    }
-
-    #video {
-        text-align: center;
-        margin-top: 70px;
-        width: 70%;
-        display: inline-block;
-    }
-
-    #services-container h2 {
-        margin-top: 30px;
-    }
-
-    .button2 {
-        width: 20%;
-    }
-
-    #booking {
-        width: 100%;
-        margin: auto;
-    }
-
-
-
-    
-
-}
-
-
-/*
-@media screen and (max-width: 950px) {
-
-    #container-header {
-        display: block;
-    }
-
-    #logo_holder {
-        width: 100%;
-        clear: both;
-        margin: 0 auto;
-        padding: 0;
-        
-    }
-
-    #logo_holder img {
-        padding-top: 10px;
-        width: 20%;
-
-    }
-
-    #menu {
-        text-align: center;
-        margin-bottom: 20px;
-        font-size: 100%;
-    }
-
-    #menu li {
-        margin: 10px 20px 0 0;
-
-    }
-
-    #cover-text h2 {
-        font-size: 220%;
-    }
-
-    #testimonial-section {
-        height: 1000px;
-        margin: auto;
-    }
-
-    .testimonial-box {
-        width: 40%;
-        margin: 4%;
-    }
-    
 
 
 
